# activitysim

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  AAA-BreakingChanges.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  HOW_TO_RELEASE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  abmexample.html  asv.conf.json  auto_ownership.csv  auto_ownership.simple_simulate.choices.csv  auto_ownership.simple_simulate.choosers.csv  auto_ownership.simple_simulate.model_design.csv  auto_ownership.simple_simulate.probs.csv  auto_ownership.simple_simulate.utilities.csv  benchpress.py  cdap.csv  cdap.hh_choices.csv  cdap.hh_utils.apply_all_people.csv  cdap.hh_utils.csv  cdap.html  cdap.ind_util.three_utils.csv  cdap.ind_utils.csv  cdap.ind_utils.one_utils.csv  cdap.ind_utils.one_vars.csv  cdap.ind_utils.three_vars.csv  cdap.ind_utils.two_utils.csv  cdap.ind_utils.two_vars.csv  cdap.person_choices.csv  cli.html  conftest.py  (+55 more)
.github/: copilot-instructions.md
1.4.0/: benchmarking.html  cli.html  core.html  development.html  estimation.html  genindex.html  gettingstarted.html  howitworks.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sources/: abmexample.rst.txt  cdap.txt  cli.rst.txt  core.rst.txt  core.txt  dataschema.rst.txt  development.rst.txt  estimation.rst.txt  examples.rst.txt  gettingstarted.rst.txt  gettingstarted.txt  howitworks.rst.txt  index.rst.txt  index.txt  models.rst.txt  models.txt  util.txt
_static/: documentation_options.js
activitysim/: __init__.py  __main__.py  activitysim.py  asim_eval.py  mnl.py  nl.py  pipeline.py  preconfigure.py  prng.py  random.py  skim.py  trace.py  tracing.py
austin/: README.MD  simulation.py  usim_tables.py
austin_mp/: activity_plans.py  area_type_impute.py  bundle_outputs_for_beam.py  simulation_mp.py
bay_area_mp/: UrbanSimTables.py  beam_skims_to_omx.py  simulation_mp.py
bay_area_urbansim/: UrbanSimTables.py
benchmarks/: mtc1.py  workspace.py
conda-environments/: activitysim-dev-base.yml  activitysim-dev-docker.yml  activitysim-dev.yml  activitysim-test-larch.yml  activitysim-test.yml  docbuild.yml  github-actions-tests.yml
conda-recipe/: README.md
develop/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  examples.html  genindex.html  gettingstarted.html  howitworks.html  index.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js
docker/: Dockerfile.debug  Dockerfile.dependencies  Dockerfile.deploy  Dockerfile.develop  docker-compose.yml  entrypoint.sh  entrypoint_debug.sh
docs/: Makefile  abmexample.rst  add_image_map.py  benchmarking.rst  cli.rst  conf.py  core.rst  dataschema.rst  development.rst  estimation.rst  examples.rst  gettingstarted.rst  howitworks.rst  index.rst  make.bat  mnl.rst  models.rst  skim.rst
example/: README.md  activitysim.py  models.py  simulation.ipynb  simulation.py  todo.md
example_2mp/: coalesce.py  script.txt  simulation.py
example_azure/: azure_env.txt  step1_create_vm.txt  step2_config_asim.txt  step3_run_asim.txt  util_resize_managed_storage.txt
example_mp/: README.MD  simulation.py  tasks.py
example_multi/: README.MD  create_examples.py  dump_data.py  import_data.py  notes.txt  simulation.py
example_multiple_zone/: import_data.py
example_stride/: coalesce.py  script.txt  simulation.py
logs/: inputCheckerSummary.txt
notebooks/: adding_tncs.ipynb  change_in_auto_ownership.ipynb  check_sf_probs.ipynb  data_mover.ipynb  estimating_tour_mode_choice.ipynb  estimation.ipynb  example_dev-Copy1.ipynb  frozen_impl_dev.ipynb  frozen_impl_interaction_sample_dev.ipynb  frozen_rand_mode_choice_dev.ipynb  fru_utils.py  getting_started.ipynb  larch_asim.py  larch_probabilities_via_estimation.ipynb  nested_logit_frozen_rand_individ_util.ipynb  simulation.ipynb  summarizing_results.ipynb  trips_in_time_and_space.ipynb  validate_frozen_impl.ipynb
omx/: File.py  __init__.py
sandbox/: README  harness.py  logging.yaml  schema.txt  settings.yaml  simulation.py
scripts/: README  README.MD  SandagNetworkLOS.py  build_omx.py  create_abmviz_inputs.py  create_sf_example.py  data_mover.ipynb  make_pipeline_output.py  mtc_inputs.py  mtc_tm1_omx_export.s  simulation.py  skim_manifest.csv  stack_mode_choice.py  stack_mode_choice2.py  verify_results.py
test/: conftest.py  test_expression_profiling.py  test_skim_name_conflicts.py
v1.0.4/: cli.html  core.html  estimation.html  genindex.html  gettingstarted.html  howitworks.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.1.3/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  examples.html  genindex.html  gettingstarted.html  howitworks.html  index.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.0/: benchmarking.html  cli.html  core.html  development.html  estimation.html  examples.html  genindex.html  gettingstarted.html  howitworks.html  index.html  models.html  py-modindex.html  search.html
v1.2.1/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  examples.html  genindex.html  gettingstarted.html  howitworks.html  index.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.2.2/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  examples.html  genindex.html  gettingstarted.html  howitworks.html  index.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.3.0/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  genindex.html  gettingstarted.html  howitworks.html  index.html  py-modindex.html  search.html  searchindex.js
v1.3.1/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  genindex.html  gettingstarted.html  howitworks.html  index.html  py-modindex.html  search.html
v1.4.0/: .buildinfo  benchmarking.html  cli.html  core.html  development.html  estimation.html  genindex.html  index.html  (+4 more)
(+5493 files in other folders)
