[build-system]
requires = [
    "setuptools>=42,<64",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
write_to = "activitysim/_generated_version.py"
version_scheme = "python-simplified-semver"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "activitysim"
add_imports = "from __future__ import annotations"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --nbmake --disable-warnings --ignore=activitysim/estimation/test"
testpaths = [
    "activitysim/abm/test",
    "activitysim/cli/test",
    "activitysim/core/test",
    "activitysim/abm/models/util/test",
]
filterwarnings = [
    "ignore::tables.NaturalNameWarning",
]
log_cli = true
tb = "native"

[tool.ruff]
select = ["E", "F", "B", "UP", "TID"]
line-length = 140

[tool.ruff.isort]
known-first-party = ["activitysim"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Ignore import violations in all `__init__.py` files
