[metadata]
name = activitysim
description = Activity-Based Travel Modeling
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[flake8]
exclude =
    .git,
    __pycache__,
    docs/_build,
    docs/conf.py,
    **/__sharrowcache__,
    other_resources/,
    sandbox/
max-line-length = 160
extend-ignore = E203, E731, W503, F841

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    pyarrow >= 2.0
    numpy >= 1.16.1
    openmatrix >= 0.3.4.1
    pandas >= 1.1.0
    pyyaml >= 5.1
    tables >= 3.5.1
    cytoolz >= 0.8.1
    psutil >= 4.1
    requests >= 2.7
    numba >= 0.55.2
    orca >= 1.6
    sharrow >= 2.0
    xarray >= 0.21
    simwrapper > 1.7
    pypyr >= 5.3

[options.entry_points]
console_scripts =
    activitysim = activitysim.cli.main:main
    activitysim_checksums = activitysim.cli.create:display_sha256_checksums
